// Vitest Snapshot v1

exports[`className + conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn3 = \\" _bg-d0t1494150182\\";
const _cn2 = \\" _bg-d0t1948734170\\";
const _cn = \\" _ai-stretch _fs-0 _dsp-flex _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fd-column _w-10px  \\";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={concatClassName(\\"\\" + (_cn + (props.green ? _cn2 : _cn3) + (props.className ? \\" \\" + props.className : \\"\\")))} />;
}
import { concatClassName } from \\"@tamagui/helpers\\";"
`;

exports[`className + conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._ai-stretch{align-items:stretch;}
:root ._fs-0{flex-shrink:0;}
:root ._dsp-flex{display:flex;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fd-column{flex-direction:column;}
:root ._w-10px{width:10px;}
:root ._bg-d0t1948734170{background-color:rgba(255,0,0,1.00);}
:root ._bg-d0t1494150182{background-color:rgba(0,0,255,1.00);}"
`;

exports[`conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn3 = \\" _bg-d0t1494150182\\";
const _cn2 = \\" _bg-d0t1948734170\\";
const _cn = \\" _ai-stretch _fs-0 _dsp-flex _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fd-column _w-10px  \\";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={concatClassName(\\"\\" + (_cn + (props.green ? _cn2 : _cn3)))} />;
}
import { concatClassName } from \\"@tamagui/helpers\\";"
`;

exports[`conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._ai-stretch{align-items:stretch;}
:root ._fs-0{flex-shrink:0;}
:root ._dsp-flex{display:flex;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fd-column{flex-direction:column;}
:root ._w-10px{width:10px;}
:root ._bg-d0t1948734170{background-color:rgba(255,0,0,1.00);}
:root ._bg-d0t1494150182{background-color:rgba(0,0,255,1.00);}"
`;
